// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ok: generated content of /all_ts_tsx/index.ts 1`] = `
"// @index(['./*.{ts,tsx}', './*/index.{ts,tsx}'], f => \`export * from '\${f.path.replace(/\\\\/index$/, '')}'\`)
export * from './a'
export * from './b'
export * from './c'
export * from './d'
export * from './j'
// @endindex
"
`;

exports[`ok: generated content of /cross/index.txt 1`] = `
"# @index('../**/*', f => \`\${f.path}\${f.ext}\`, { onlyFiles: true })
../all_ts_tsx/a.ts
../all_ts_tsx/b.ts
../all_ts_tsx/c.tsx
../all_ts_tsx/d/index.ts
../all_ts_tsx/e/hello.ts
../all_ts_tsx/index.ts
../all_ts_tsx/j/index.tsx
../cross_negative/index.txt
../invalid/empty
../invalid/error
../re/index.js
../scripts/index.html
../scripts/jssdk.js
../scripts/polyfill.js
../scss/a.scss
../scss/b.scss
../scss/c.scss
../scss/index.scss
../sort/001.ts
../sort/1.ts
../sort/2.ts
../sort/11.ts
../sort/884.ts
../sort/a.ts
../sort/abc.ts
../sort/bbb.ts
../sort/c.ts
../sort/index.ts
../sort/index2.ts
../sort/国家.ts
../types/icons/arrow.svg
../types/icons/home.svg
../types/icons/pass.svg
../types/icons/picture.svg
../types/icons/user.svg
../types/index.ts
# @endindex

# @index('../**/*', f => \`\${f.path}\${f.ext}\`, { onlyDirectories: true })
../all_ts_tsx
../all_ts_tsx/d
../all_ts_tsx/e
../all_ts_tsx/j
./
../cross_negative
../invalid
../re
../scripts
../scss
../sort
../types
../types/icons
# @endindex

    ! @index('../**/*.scss', (f, _, {isFirst}) => \`\${isFirst ? '****' : ''}\${f.path}\${f.ext}\`)
    ****../scss/a.scss
    ../scss/b.scss
    ../scss/c.scss
    ../scss/index.scss
    ! @endindex
"
`;

exports[`ok: generated content of /cross_negative/index.txt 1`] = `
"# @index(['../*', '!../scss'], f => \`\${f.path}\${f.ext}\`)
../all_ts_tsx
../cross
./
../invalid
../re
../scripts
../sort
../types
# @endindex
"
`;

exports[`ok: generated content of /invalid/empty 1`] = `""`;

exports[`ok: generated content of /invalid/error 1`] = `
"// @index(\\"./*', f => \`export * from '\${f.path}'\`)
"
`;

exports[`ok: generated content of /re/index.js 1`] = `
"// @index('../../../node_modules/fs-extra/lib/index.js', /\\\\.\\\\.\\\\.require\\\\('(.+?)'\\\\)/g, (m, _) => \`\${_.camel(m[1])}\`)
fs
copySync
copy
empty
ensure
json
mkdirs
moveSync
move
output
pathExists
remove
// @endindex

// @index('../../../node_modules/fs-extra/package.json', /(?<=\\"dependencies\\": \\\\{).+?(?=\\\\})/s, /\\"(.+?)\\": \\"(.+?)\\"/g, (m, _, e) => \`\${e.index}. \${m[1]} ==> \${m[2]}\`)
0. at-least-node ==> ^1.0.0
1. graceful-fs ==> ^4.2.0
2. jsonfile ==> ^6.0.1
3. universalify ==> ^2.0.0
// @endindex

  // @index('../../../node_modules/fs-extra/lib/index.js', /\\\\.\\\\.\\\\.require\\\\('(.+?)'\\\\)/g, (m, _) => \`\${_.camel(m[1])}\`)
  fs
  copySync
  copy
  empty
  ensure
  json
  mkdirs
  moveSync
  move
  output
  pathExists
  remove
  // @endindex"
`;

exports[`ok: generated content of /scripts/index.html 1`] = `
"<html>
  <head>
    <!-- @index('./*.js', f => \`<script type=\\"text/javascript\\" src=\\"\${f.path}\${f.ext}\\"></script>\`) -->
    <script type=\\"text/javascript\\" src=\\"./jssdk.js\\"></script>
    <script type=\\"text/javascript\\" src=\\"./polyfill.js\\"></script>
    <!-- @endindex -->
  </head>
  <body>
    ...
  </body>
</html>
"
`;

exports[`ok: generated content of /scss/index.scss 1`] = `
"// @index('./*', f => \`@import '\${f.path}\${f.ext}';\`)
@import './a.scss';
@import './b.scss';
@import './c.scss';
// @endindex
"
`;

exports[`ok: generated content of /sort/index.ts 1`] = `
"// @index('./*.ts', f => \`export * from '\${f.path}'\`)
export * from './001'
export * from './1'
export * from './2'
export * from './11'
export * from './884'
export * from './a'
export * from './abc'
export * from './bbb'
export * from './c'
export * from './index2'
export * from './国家'
// @endindex
"
`;

exports[`ok: generated content of /sort/index2.ts 1`] = `
"// @index('./*.ts', f => \`export * from '\${f.path}'\`)
export * from './001'
export * from './1'
export * from './2'
export * from './11'
export * from './884'
export * from './a'
export * from './abc'
export * from './bbb'
export * from './c'
export * from './index'
export * from './国家'
"
`;

exports[`ok: generated content of /types/index.ts 1`] = `
"export type IconName =
  // @index(['./icons/*.svg'], (f, _, e) => \`'\${f.name}'\${e.isLast ? '' : ' |'}\`)
  'arrow' |
  'home' |
  'pass' |
  'picture' |
  'user'
  // @endindex
"
`;

exports[`ok: messages of /all_ts_tsx/index.ts 1`] = `Array []`;

exports[`ok: messages of /cross/index.txt 1`] = `Array []`;

exports[`ok: messages of /cross_negative/index.txt 1`] = `Array []`;

exports[`ok: messages of /invalid/empty 1`] = `
Array [
  "No @index maker found.",
]
`;

exports[`ok: messages of /invalid/error 1`] = `
Array [
  "No @index maker found.",
  "[SKIP] Invalid patterns or code generator. (// @index(\\"./*', f => \`export * from '\${f.path}'\`))",
]
`;

exports[`ok: messages of /re/index.js 1`] = `Array []`;

exports[`ok: messages of /scripts/index.html 1`] = `Array []`;

exports[`ok: messages of /scss/index.scss 1`] = `Array []`;

exports[`ok: messages of /sort/index.ts 1`] = `Array []`;

exports[`ok: messages of /sort/index2.ts 1`] = `Array []`;

exports[`ok: messages of /types/index.ts 1`] = `Array []`;
